Added a new project and modify projects section

--- a/index.html
+++ b/index.html
@@ -177,84 +177,158 @@
           </p>
           <span></span>
         </div>
+
         <div
-          class="projects d-flex justify-content-evenly flex-column flex-md-row gap-4 px-4 px-md-0 pt-5"
+          id="carouselExampleIndicators"
+          class="carousel slide pt-5"
+          data-bs-ride="true"
         >
-          <div
-            class="project position-relative rounded-4 shadow"
-            data-project="Quizzical App"
-          >
-            <img
-              src="./images/quizzical app.PNG"
-              alt="Quizzical App"
-              class="h-100 position-absolute"
-            />
-            <div class="position-absolute w-100 bg-dark-subtle p-3">
-              <h4 class="fw-bold mb-4">Quizzical App</h4>
-              <a
-                href="https://dvloper-ibrahim.github.io/Quizzical-App/"
-                target="_blank"
-                class="btn btn-success px-2 py-1 me-2"
-                >Go Live</a
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div
+                class="projects d-flex justify-start flex-column flex-md-row gap-4 px-4 px-md-0 mx-3"
               >
-              <a
-                href="https://github.com/Dvloper-Ibrahim/Quizzical-App"
-                target="_blank"
-                class="btn btn-primary px-2 py-1"
-                >Repo</a
+                <div
+                  class="project position-relative rounded-4 shadow"
+                  data-project="Crwn-clothing Ecommerce"
+                >
+                  <img
+                    src="./images/crwn-clothing-ecommerce.PNG"
+                    alt="Crwn-clothing Ecommerce"
+                    class="h-100 position-absolute"
+                  />
+                  <div class="position-absolute w-100 bg-dark-subtle p-3">
+                    <h4 class="fw-bold mb-4">Crwn-clothing Ecommerce</h4>
+                    <a
+                      href="https://crwnclothing-ibrahim.netlify.app/"
+                      target="_blank"
+                      class="btn btn-success px-2 py-1 me-2"
+                      >Go Live</a
+                    >
+                  </div>
+                </div>
+                <div
+                  class="project position-relative rounded-4 shadow"
+                  data-project="Quizzical App"
+                >
+                  <img
+                    src="./images/quizzical app.PNG"
+                    alt="Quizzical App"
+                    class="h-100 position-absolute"
+                  />
+                  <div class="position-absolute w-100 bg-dark-subtle p-3">
+                    <h4 class="fw-bold mb-4">Quizzical App</h4>
+                    <a
+                      href="https://dvloper-ibrahim.github.io/Quizzical-App/"
+                      target="_blank"
+                      class="btn btn-success px-2 py-1 me-2"
+                      >Go Live</a
+                    >
+                    <a
+                      href="https://github.com/Dvloper-Ibrahim/Quizzical-App"
+                      target="_blank"
+                      class="btn btn-primary px-2 py-1"
+                      >Repo</a
+                    >
+                  </div>
+                </div>
+                <div
+                  class="project position-relative rounded-4 shadow"
+                  data-project="Speed Typing Game"
+                >
+                  <img
+                    src="./images/speed typing game.PNG"
+                    alt="Speed Typing Game"
+                    class="h-100 position-absolute"
+                  />
+                  <div class="position-absolute w-100 bg-dark-subtle p-3">
+                    <h4 class="fw-bold mb-4">Speed Typing Game</h4>
+                    <a
+                      href="https://dvloper-ibrahim.github.io/Speed-Typing-Game/"
+                      target="_blank"
+                      class="btn btn-success px-2 py-1 me-2"
+                      >Go Live</a
+                    >
+                    <a
+                      href="https://github.com/Dvloper-Ibrahim/Speed-Typing-Game"
+                      target="_blank"
+                      class="btn btn-primary px-2 py-1"
+                      >Repo</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div
+                class="projects d-flex justify-start flex-column flex-md-row gap-4 px-4 px-md-0 mx-3"
               >
+                <div
+                  class="project position-relative rounded-4 shadow"
+                  data-project="Tenzies Game"
+                >
+                  <img
+                    src="./images/tenzies game.PNG"
+                    alt="Quizzical App"
+                    class="h-100 position-absolute"
+                  />
+                  <div class="position-absolute w-100 bg-dark-subtle p-3">
+                    <h4 class="fw-bold mb-4">Tenzies Game</h4>
+                    <a
+                      href="https://dvloper-ibrahim.github.io/Tenzies-Game/"
+                      target="_blank"
+                      class="btn btn-success px-2 py-1 me-2"
+                      >Go Live</a
+                    >
+                    <a
+                      href="https://github.com/Dvloper-Ibrahim/Tenzies-Game"
+                      target="_blank"
+                      class="btn btn-primary px-2 py-1"
+                      >Repo</a
+                    >
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-          <div
-            class="project position-relative rounded-4 shadow"
-            data-project="Speed Typing Game"
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev"
           >
-            <img
-              src="./images/speed typing game.PNG"
-              alt="Speed Typing Game"
-              class="h-100 position-absolute"
-            />
-            <div class="position-absolute w-100 bg-dark-subtle p-3">
-              <h4 class="fw-bold mb-4">Speed Typing Game</h4>
-              <a
-                href="https://dvloper-ibrahim.github.io/Speed-Typing-Game/"
-                target="_blank"
-                class="btn btn-success px-2 py-1 me-2"
-                >Go Live</a
-              >
-              <a
-                href="https://github.com/Dvloper-Ibrahim/Speed-Typing-Game"
-                target="_blank"
-                class="btn btn-primary px-2 py-1"
-                >Repo</a
-              >
-            </div>
-          </div>
-          <div
-            class="project position-relative rounded-4 shadow"
-            data-project="Tenzies Game"
+            <span class="carousel-control-prev-icon" aria-hidden="true">
+              <span></span>
+            </span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next"
           >
-            <img
-              src="./images/tenzies game.PNG"
-              alt="Quizzical App"
-              class="h-100 position-absolute"
-            />
-            <div class="position-absolute w-100 bg-dark-subtle p-3">
-              <h4 class="fw-bold mb-4">Tenzies Game</h4>
-              <a
-                href="https://dvloper-ibrahim.github.io/Tenzies-Game/"
-                target="_blank"
-                class="btn btn-success px-2 py-1 me-2"
-                >Go Live</a
-              >
-              <a
-                href="https://github.com/Dvloper-Ibrahim/Tenzies-Game"
-                target="_blank"
-                class="btn btn-primary px-2 py-1"
-                >Repo</a
-              >
-            </div>
-          </div>
+            <span class="carousel-control-next-icon" aria-hidden="true">
+              <span></span>
+            </span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
       </div>
     </section>
